--- a/WebTour/src/main/resources/templates/Admin/promotion_management.html
+++ b/WebTour/src/main/resources/templates/Admin/promotion_management.html
@@ -33,6 +33,9 @@
 			<li><a th:href="@{/admin/promotion-management}"> <i
 					class="fas fa-edit"> </i> Promotion
 			</a></li>
+			<li><a th:href="@{/admin/tours-management}"> <i
+					class="fas fa-plane"> </i> Tours
+			</a></li>
 		</ul>
 	</div>
 	<div class="main-content">
