commit 9th continute
fix select option address in payment.html

--- a/WebTour/src/main/resources/static/css/home_user.css
+++ b/WebTour/src/main/resources/static/css/home_user.css
@@ -248,7 +248,7 @@ z-index: 1000; /* Đặt dưới search-top nhưng cao hơn nội dung khác */
     text-align: center;
     align-content: center;
     height: 550px;
-    background-image: url('/image/bg.jpg');
+    background-image: url('/imagess/bg.jpg');
     /* background-repeat: no-repeat; */
     background-size: cover;
 }
