--- a/WebTour/src/main/resources/templates/components/headerAdmin.html
+++ b/WebTour/src/main/resources/templates/components/headerAdmin.html
@@ -250,8 +250,14 @@ th {
       <li><a th:href="@{/admin/customer-management}">
           <iclass="fasfa-edit"> </i> Customer
         </a></li>
-      <li><a th:href="@{/admin/promotion-management}"> <i class="fas fa-edit"> </i> Promotion
+      <!-- <li><a th:href="@{/admin/promotion-management}"> <i class="fas fa-edit"> </i> Promotion
         </a></li>
+        <li> -->
+        <li><a th:href="@{/admin/promotion-management}"> <i class="fas fa-edit"> </i> Promotion
+        </a></li>
+        <li>
+        	<a th:href="@{/admin/schedule-management}"> <i class="fas fa-edit"> </i> Schedule </a>
+   		</li>
     </ul>
   </div>
     <div class="header">
