--- a/WebTour/src/main/resources/templates/User/payment.html
+++ b/WebTour/src/main/resources/templates/User/payment.html
@@ -45,7 +45,7 @@
 
 			<div class="form-group">
 				<label for="city"> Tỉnh thành </label> 
-				<select id="city" name="provinceId" onchange="updateDistricts()">
+				<select id="province" name="provinceId" onchange="updateDistricts()">
 		            <option th:each="prov : ${province}" 
 		                    th:value="${prov.provinceId}" 
 		                    th:text="${prov.name}"
