--- a/WebTour/src/main/resources/templates/User/detailTour.html
+++ b/WebTour/src/main/resources/templates/User/detailTour.html
@@ -131,7 +131,7 @@
 						<div class="title">Loại khách</div>
 						<div class="up-row">
 							<div class="row">
-								<label>Người lớn</label>
+								<label class="row-word">Người lớn</label>
 								<div class="counter">
 									<button id="bt-subtract">-</button>
 									<input data-id="2" id="value-quantity" type="text" value="0">
