--- a/WebTour/src/main/resources/static/css/loginStyle.css
+++ b/WebTour/src/main/resources/static/css/loginStyle.css
@@ -98,18 +98,7 @@ input {
     padding-right: 40px; /* Chừa khoảng trống cho icon */
 }
 
-.password-wrapper i {
-    position: absolute;
-    right: 10px;
-    top: 50%;
-    transform: translateY(-50%);
-    cursor: pointer;
-    color: #333;
-}
 
-.password-wrapper i:hover {
-    color: #57b5eb;
-}
 .container {
 	background-color: #ffffffe0;
 	border-radius: 10px;
@@ -150,6 +139,14 @@ input {
 	opacity: 1;
 	z-index: 5;
 	animation: show 0.6s;
+}
+.gender-wrapper
+{
+	display: flex;
+	width: 100%;
+    justify-content: space-around;
+    font-size: 12px;
+    margin-bottom: 5px;
 }
 
 @keyframes show {
@@ -244,29 +241,4 @@ input {
 	margin: 0 5px;
 	height: 40px;
 	width: 40px;
-}
-
-footer {
-	background-color: #222;
-	color: #fff;
-	font-size: 14px;
-	bottom: 0;
-	position: fixed;
-	left: 0;
-	right: 0;
-	text-align: center;
-	z-index: 999;
-}
-
-footer p {
-	margin: 10px 0;
-}
-
-footer i {
-	color: red;
-}
-
-footer a {
-	color: #3c97bf;
-	text-decoration: none;
 }
