--- a/WebTour/src/main/resources/templates/Admin/customer_management.html
+++ b/WebTour/src/main/resources/templates/Admin/customer_management.html
@@ -6,7 +6,6 @@
 <title>Quản lý khách hàng</title>
 <link rel="stylesheet" href="/css/home_admin.css">
 <link rel="stylesheet" href="/css/base.css">
-<link rel="stylesheet" href="/css/sidebar_admin.css">
 <link
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
 	rel="stylesheet" />
@@ -17,43 +16,13 @@
 
 </head>
 <body>
-	<div class="sidebar">
-		<div class="logo">
-			<img alt="" height="50" width="50" src="https://storage.googleapis.com/a1aa/image/IkIPh4GKaG77KZx7nvUG3GOohf7MoegCFbHKFOjpxjycEvjTA.jpg" />
-		</div>
-		<ul class="nav">
-			<li><a th:href="@{/admin}"> <i class="fas fa-home"> </i> Dashboard
-			</a></li>
-			<li><a href="#"> <i class="fas fa-envelope"> </i> Email
-			</a></li>
-			<li><a th:href="@{/admin/customer-management}"> <i
-					class="fas fa-edit"> </i> Customer
-			</a></li>
-			<li><a th:href="@{/admin/promotion-management}"> <i
-					class="fas fa-edit"> </i> Promotion
-			</a></li>
-			<li><a th:href="@{/admin/tours-management}"> <i
-					class="fas fa-plane"> </i> Tours
-			</a></li>
-			
-		</ul>
-	</div>
+	<div class="sidebar"></div>
 	<div class="main-content">
-		<div class="header">
-			<div class="search-bar">
-				<input placeholder="Search..." type="text" /> <i
-					class="fas fa-search"> </i>
-			</div>
-			<div class="user-info">
-				<img alt="User Avatar" height="40"
-					src="https://storage.googleapis.com/a1aa/image/IkIPh4GKaG77KZx7nvUG3GOohf7MoegCFbHKFOjpxjycEvjTA.jpg"
-					width="40" /> <span> John Doe </span>
-			</div>
-		</div>
+		<div class="header"></div>
 		<div class="table-container">
 			<h2 class="mb-20">Customer</h2>
 			<div class="filter">
-				
+
 				<button id="filter-customer-desc">Tăng</button>
 				<button id="filter-customer-asc">Giảm</button>
 			</div>
@@ -79,7 +48,7 @@
 			</table>
 		</div>
 	</div>
-	
+	<script src="../js/headerAdmin.js"></script>
 	<script src="../js/customer_management.js"></script>
-</body> 
+</body>
 </html>
