--- a/WebTour/src/main/resources/templates/Admin/promotion_management.html
+++ b/WebTour/src/main/resources/templates/Admin/promotion_management.html
@@ -8,7 +8,6 @@
 <link rel="stylesheet" href="/css/modal.css">
 <link rel="stylesheet" href="/css/base.css">
 <link rel="stylesheet" href="/css/promotion.css">
-<link rel="stylesheet" href="/css/sidebar_admin.css">
 <link
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
 	rel="stylesheet" />
@@ -18,38 +17,9 @@
 </head>
 
 <body>
-	<div class="sidebar">
-		<div class="logo">
-			<img alt="" height="50" width="50" src="https://storage.googleapis.com/a1aa/image/IkIPh4GKaG77KZx7nvUG3GOohf7MoegCFbHKFOjpxjycEvjTA.jpg" />
-		</div>
-		<ul class="nav">
-			<li><a th:href="@{/admin}"> <i class="fas fa-home"> </i> Dashboard
-			</a></li>
-			<li><a href="#"> <i class="fas fa-envelope"> </i> Email
-			</a></li>
-			<li><a th:href="@{/admin/customer-management}"> <i
-					class="fas fa-edit"> </i> Customer
-			</a></li>
-			<li><a th:href="@{/admin/promotion-management}"> <i
-					class="fas fa-edit"> </i> Promotion
-			</a></li>
-			<li><a th:href="@{/admin/tours-management}"> <i
-					class="fas fa-plane"> </i> Tours
-			</a></li>
-		</ul>
-	</div>
+	<div class="sidebar"></div>
 	<div class="main-content">
-		<div class="header">
-			<div class="search-bar">
-				<input placeholder="Search..." type="text" /> <i
-					class="fas fa-search"> </i>
-			</div>
-			<div class="user-info">
-				<img alt="User Avatar" height="40"
-					src="https://storage.googleapis.com/a1aa/image/IkIPh4GKaG77KZx7nvUG3GOohf7MoegCFbHKFOjpxjycEvjTA.jpg"
-					width="40" /> <span> John Doe </span>
-			</div>
-		</div>
+		<div class="header"></div>
 		<div class="tab-content">
 			<div class="tab-title-promotion mb-20">
 				<h1 class="title-promotion">Khuyến mãi</h1>
@@ -59,14 +29,14 @@
 
 			<div class="filter">
 				<div class="d-flex space-between">
-					<label for="" class="align-center d-flex mr-10">Ngày bắt đầu</label>
-					<input type="date" id="datetime-start-filter" class="datetime-start mr-50"
-						name="datetime">
+					<label for="" class="align-center d-flex mr-10">Ngày bắt
+						đầu</label> <input type="date" id="datetime-start-filter"
+						class="datetime-start mr-50" name="datetime">
 				</div>
 				<div class="d-flex space-between">
-					<label for="" class="align-center d-flex mr-10">Ngày hết hạn</label>
-					<input type="date" id="datetime-end-filter" class="datetime-end mr-10"
-						name="datetime">
+					<label for="" class="align-center d-flex mr-10">Ngày hết
+						hạn</label> <input type="date" id="datetime-end-filter"
+						class="datetime-end mr-10" name="datetime">
 				</div>
 				<button id="filter-promotion-byDate">Lọc</button>
 			</div>
@@ -199,7 +169,7 @@
 			</div>
 		</div>
 	</div>
-
+	<script src="../js/headerAdmin.js"></script>
 	<script src="../js/promotion.js"></script>
 </body>
 </html>
