--- a/WebTour/src/main/resources/templates/components/notification.html
+++ b/WebTour/src/main/resources/templates/components/notification.html
@@ -32,18 +32,16 @@
 .green {
   color: #4ec07d;
   font-size: 0.9em;
-  font-weight: 600;
   letter-spacing: 3px;
   padding-top: 5px;
   padding-bottom: 5px;
   text-transform: uppercase;
-  font-weight: 700;
+  font-weight: 600;
 }
 
 .red {
   color: #e96075;
   font-size: 0.9em;
-  font-weight: 600;
   letter-spacing: 3px;
   padding-top: 5px;
   padding-bottom: 5px;
@@ -65,7 +63,7 @@
 .mess {
   margin-top: -5px;
   font-size: 10px;
-  font-weight: 100;
+  font-weight: 600;
   color: #5e5e5e;
   letter-spacing: 1px;
 }
@@ -229,6 +227,36 @@ button, .dot {
   transform: scale(1.05);
   transition: all 0.3s ease-in-out;
 }
+/* Màn hình loading phủ toàn bộ */
+.loading-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Màu nền mờ */
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 2000;
+    display: none; /* Ẩn màn hình loading mặc định */
+}
+
+/* Thiết kế cho vòng xoay loading */
+.loading-spinner {
+    border: 8px solid #f3f3f3; /* Màu xám nhạt */
+    border-top: 8px solid #3498db; /* Màu xanh dương */
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
 
 @keyframes bounce {
   50% {
@@ -305,4 +333,7 @@ button, .dot {
     </button>
   </div>
 </div>
-
+<!-- HTML for loading page -->
+<div id="loading-screen" class="loading-screen">
+    <div class="loading-spinner"></div>
+</div>
