--- a/WebTour/src/main/resources/templates/forgotPassword.html
+++ b/WebTour/src/main/resources/templates/forgotPassword.html
@@ -26,6 +26,8 @@
 			</div>
 		</div>
 	</div>
+	<div id="notification"></div>
+		<script src="/js/notification.js"></script>
 	<script src="../js/forgotScript.js"></script>
 </body>
 </html>
