--- a/WebTour/src/main/resources/templates/home.html
+++ b/WebTour/src/main/resources/templates/home.html
@@ -425,7 +425,7 @@
     <div class="container">
         <div class="container">
             <div class="logo">
-                <a href="home.html"><img src="/imagess/logo.png" alt="ND Travel Logo"></a>
+                <a href="home.html"><img src="/imagess/background_light_v1.jpg" alt="ND Travel Logo"></a>
             </div>
             <nav>
                 <ul>
