--- a/WebTour/src/main/resources/templates/login.html
+++ b/WebTour/src/main/resources/templates/login.html
@@ -13,14 +13,35 @@
 		<div class="form-container sign-up-container">
 			<form>
 				<h1>Create Account</h1>
-				<input id="full-name-register" type="text" placeholder="Full name" required/>
-				<input id="email-register" type="email" placeholder="Email" required/>
-				<input id="user-name-register" type="text" placeholder="User name" required/>
-				<input id="phone-register" type="tel" placeholder="Phone" pattern="^0[0-9]{6,12}" required/>
+				<input id="full-name-register" type="text" placeholder="Full name" required 
+												    pattern="^[a-zA-Z_ÀÁÂÃÈÉÊẾÌÍÒÓÔÕÙÚĂĐĨŨƠàáâãèéêếìíòóôõùúăđĩũơƯĂẠẢẤẦẨẪẬẮẰẲẴẶẸẺẼỀỀỂưăạảấầẩẫậắằẳẵặẹẻẽềềểỄỆỈỊỌỎỐỒỔỖỘỚỜỞỠỢỤỦỨỪễệỉịọỏốồổỗộớờởỡợụủứừỬỮỰỲỴÝỶỸửữựỳỵỷỹ ]{2,255}$" 
+												    title="Tên gồm 2 - 255 ký tự chữ cái và khoảng trắng" />
+				<input id="email-register" type="email" placeholder="Email" required 
+												    title="Email không hợp lệ. VD: manh.le@tcdata.vn" />
+				<input id="user-name-register" type="text" placeholder="User name" required 
+													pattern="^[a-zA-Z0-9]{6,20}$" 
+												    title="Username gồm 6-20 ký tự số và chữ cái" />
+				
+				<input id="phone-register" type="tel" placeholder="Phone" required 
+													pattern="^0[0-9]{9,11}$|^[+][0-9]{2}[0-9]{8,10}$|^0[0-9]{2}-[0-9]{3,4}-[0-9]{3,4}$|^[+][0-8]{2}-[0-9]{3}-[0-9]{3,4}-[0-9]{3,4}$" 
+												    title="Phone chỉ chứa 10-12 ký tự số" />
 				<div class="password-wrapper">
-				    <input id="password-register" type="password" placeholder="Password" required/>
-				    <i class="fas fa-eye" id="togglePasswordRegister"></i>
+				    <input id="password-register" type="password" placeholder="Password" required 
+													pattern="^[a-zA-Z0-9]{6,20}$" 
+												    title="Password gồm 6-20 ký tự số và chữ cái" />
+				   
 				</div>
+				<div class="gender-wrapper">
+                    <label>
+                        <input type="radio" name="gender" value="male" required /> Male
+                    </label>
+                    <label>
+                        <input type="radio" name="gender" value="female" required /> Female
+                    </label>
+                    <label>
+                        <input type="radio" name="gender" value="other" required /> Other
+                    </label>
+                </div>
 				<button onClick="handleRegisterAccont(event)">Sign Up</button>
 			</form>
 		</div>
@@ -30,7 +51,7 @@
 				<input id="user-name-login" type="text" placeholder="User name" required/>
 				<div class="password-wrapper">
 				    <input id="password-login" type="password" placeholder="Password" required/>
-				    <i class="fas fa-eye" id="togglePasswordLogin"></i>
+				    
 				</div>
 				<a href="/forgot-password">Forgot your password?</a>
 				<button onClick="handleLogin(event)">Sign In</button>
