--- a/WebTour/src/main/resources/static/css/order.css
+++ b/WebTour/src/main/resources/static/css/order.css
@@ -1,4 +1,3 @@
-
 .main-content {
 	/* margin-left: 250px; */
 	padding: 20px;
@@ -184,12 +183,18 @@ th {
 	background-color: #343a40;
 	color: #fff;
 }
-.table-td{
+
+.table-td {
 	text-align: center;
 }
-.btn-payment-status{
+
+.table-td-date {
+	width: 7%;
+}
+
+.btn-payment-status {
 	background: yellow;
-    border-radius: 12px;
+	border-radius: 12px;
 }
 
 .btn-cancel {
@@ -209,28 +214,29 @@ th {
 .btn-cancel:hover, .btn-payment-status:hover {
 	cursor: pointer;
 }
+
 #payment-status {
 	border: 1px solid #dbdbdb;
-    border-radius: 6px;
-    padding: 4px;
+	border-radius: 6px;
+	padding: 4px;
 }
-#add-input,
-#btn-input-ok {
+
+#add-input, #btn-input-ok {
 	border: 1px solid #dbdbdb;
-    border-radius: 6px;
-    padding: 4px;
-    margin-left: 6%;
-    
+	border-radius: 6px;
+	padding: 4px;
+	margin-left: 6%;
 }
-.div-search-departture{
+
+.div-search-departture {
 	display: flex;
 	margin-top: 2%;
 }
 /* dùng để đổi màu khi payment_status là paid (đã thanh toán) */
 .paid-status {
-    background-color: green; 
-    color: white; 
-    cursor: not-allowed;
+	background-color: green;
+	color: white;
+	cursor: not-allowed;
 }
 /*css cho nút hủy đơn */
 .btn-cancel {
@@ -250,33 +256,94 @@ th {
 
 /*css cho modal hủy đơn*/
 .modal-overlay {
-    display: none; /* Ẩn modal mặc định */
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5); /* Màu nền mờ cho overlay */
-    align-items: center;
-    justify-content: center;
-    z-index: 1000;
+	display: none; /* Ẩn modal mặc định */
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.5); /* Màu nền mờ cho overlay */
+	align-items: center;
+	justify-content: center;
+	z-index: 1000;
 }
 
 .modal-overlay.show {
-    display: flex; /* Hiển thị modal khi có lớp "show" */
+	display: flex; /* Hiển thị modal khi có lớp "show" */
 }
 
 .modal-content {
-    background: white;
-    padding: 20px;
-    border-radius: 8px;
-    text-align: center;
-    max-width: 400px;
-    width: 90%;
+	background: white;
+	padding: 20px;
+	border-radius: 8px;
+	text-align: center;
+	max-width: 400px;
+	width: 90%;
 }
-.btn-cancel{
+
+.btn-cancel {
 	margin-top: 2%;
 }
-.table-td-action{
+
+.table-td-action {
 	width: 15%;
+}
+
+.pre {
+	margin: 0 2%;
+}
+
+/* các nút phân trang */
+.pagination {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	list-style-type: none;
+	padding: 0;
+	margin-top: 20px;
+}
+
+.pagination li {
+	margin: 0 5px;
+}
+
+.pagination-button {
+	margin: 0 5px;
+}
+
+.pagination a, .pagination button {
+	text-decoration: none;
+	color: #1e88e5;
+	padding: 10px 15px;
+	border: 1px solid #ddd;
+	border-radius: 4px;
+	background-color: #fff;
+}
+
+.pagination a:hover, .pagination button:hover {
+	background-color: #eee;
+}
+
+.pagination .current {
+	margin-left: 1%;
+	margin-right: 1%;
+	background-color: #1e88e5;
+	color: white;
+}
+
+.pagination .active {
+	color: white;
+	background-color: #1e88e5;
+}
+
+.pagination .icon {
+	font-size: 18px;
+}
+
+.current, .bt-pre {
+	margin-right: 1%;
+}
+
+.bt-next {
+	margin-left: 1%;
 }
