--- a/WebTour/src/main/resources/templates/User/order.html
+++ b/WebTour/src/main/resources/templates/User/order.html
@@ -6,113 +6,133 @@
 
 <link rel="stylesheet" href="../css/order.css">
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 	<div class="container">
-	<!-- 	<div class="cart-empty">
-			<h1>Giỏ hàng của bạn</h1>
-			<div class="icon">
-				<i class="fas fa-shopping-bag"></i>
-			</div>
-			<p>Không có sản phẩm nào trong giỏ hàng của bạn</p>
-		</div> -->
+	<div class="header">
 
-		<div class="main-content">
-		<div class="header">
-			<!-- <div class="search-bar">
-				<input placeholder="Search..." type="text" /> <i
-					class="fas fa-search"> </i>
-			</div> -->
-			
-			<div class="filter">
-            <!-- <i class="fas fa-filter"></i> -->
-            <label>Lọc theo: </label>
-            <select id="payment-status" >
-                <option value="">ALL</option>
-                <option value="1">Paid</option>
-                <option value="2">UnPaid</option>
-                <option value="3">Departure</option>
-            </select>
-            
-            <div class="div-search-departture">
-	            <!-- ô input của option departure -->
-	            <input  type="text" id="add-input" placeholder="Nhập departure" style="display: none;" />
-	            <button id="btn-input-ok" style="display: none;" >OK</button>
-            </div>
-            
-        </div>
-		</div>
-		
-		<div class="table-container">
-			   <table>
-				<thead>
-					<tr>
-						<th>#</th>
-						<th>Tour</th>
-						<th>Mã thanh toán</th>
-						<th>Ngày đặt</th>
-						<th>Ngày đi</th>
-						<th>Số lượng</th>
-						<th>Loại vé</th>
-						<th>Khởi hành</th>
-						<th>Thành tiền</th>
-						<th>Thanh toán</th>
-						<th>Trạng thái</th>
-						<th>Action</th>
-					</tr>
-				</thead>
-				<tbody id="user-table">
-			        <tr th:each="booking : ${bookings}">
-			            <td class="table-td" th:text="${booking[0]}"></td> <!-- Mã đơn -->
-			            <td class="table-td" th:text="${booking[4]}"></td> <!-- Tour -->
-			            <td class="table-td" th:text="${booking[10]}"></td> <!-- Mã thanh toán -->
-			            <td class="table-td" th:text="${#dates.format(booking[1], 'yyyy-MM-dd')}"></td> <!-- Ngày đặt -->
-			            <td class="table-td" th:text="${#dates.format(booking[8], 'yyyy-MM-dd')}"></td> <!-- Ngày đi --> 
-			            <td class="table-td" th:text="${booking[5]}"></td> <!-- Số lượng -->
-			            <td class="table-td" th:text="${booking[6]}"></td> <!--  Loại vé -->            
-			            <td class="table-td" th:text="${booking[9]}"></td> <!-- Khởi hành -->
-			            <td class="table-td" th:text="${booking[7]}"></td> <!-- Thành tiền -->
-			            <td class="table-td"> <!-- Thanh toán -->
-				            <span th:if="${booking[2] == 1}">Cash</span>
-				        	<span th:if="${booking[2] == 2}">Online</span>
-			            </td>
-			            <td class="table-td"> <!-- Trạng thái -->
-			             	<span th:if="${booking[3] == 1}">Paid</span>
-				        	<span th:if="${booking[3] == 2}">Unpaid</span>
-			            	<span th:if="${booking[3] == null or booking[3] == ''}">Unpaid</span>
-			            </td> 
-			           <td class="table-td table-td-action"> 
-			           		<button class="btn-payment-status"
-            						th:text="${booking[3] == 1 ? 'Đã thanh toán' : 'Thanh toán'}" 
-            						th:disabled="${booking[3] == 1}"
-            						th:classappend="${booking[3] == 1} ? 'paid-status' : ''"
-            						th:attr="data-booking-id=${booking[0]} , data-total-price=${booking[7]}">
-         						</button> 
-         						 <!-- Hiển thị nút hủy đơn chỉ khi đơn hàng chưa thanh toán -->
-           					<button id="bt-cancel-order" class="btn-cancel" th:onclick="'navigateRefundPage(' + ${booking[0]} + ')'"
-					                th:if="${booking[3] != 1}" 
-					                th:attr="data-booking-id=${booking[0]}">Hủy đơn
-				                </button>
-			           </td>
-			        </tr>
-			        <!--modal hủy đơn -->
-			        <div id="cancel-confirm-modal" class="modal-overlay">
-					    <div class="modal-content">
-					        <p>Bạn có chắc chắn muốn hủy đơn này không?</p>
-					        <button id="confirm-cancel">Xác nhận</button>
-					        <button id="cancel-close">Hủy</button>
-					    </div>
+				<div class="filter">
+					<!-- <i class="fas fa-filter"></i> -->
+					<label>Lọc theo: </label> <select id="payment-status">
+						<option value="">ALL</option>
+						<option value="1">Paid</option>
+						<option value="2">UnPaid</option>
+						<option value="3">Departure</option>
+					</select>
+
+					<div class="div-search-departture">
+						<!-- ô input của option departure -->
+						<input type="text" id="add-input" placeholder="Nhập departure"
+							style="display: none;" />
+						<button id="btn-input-ok" style="display: none;">OK</button>
 					</div>
 
-    			</tbody>
-			</table>  
-			 
-			 
+				</div>
+			</div>
 
+			<div class="table-container">
+				<table>
+					<thead>
+						<tr>
+							<th>#</th>
+							<th>Tour</th>
+							<th>Mã thanh toán</th>
+							<th>Ngày đặt</th>
+							<th>Ngày đi</th>
+							<th>Số lượng</th>
+							<th>Loại vé</th>
+							<th>Khởi hành</th>
+							<th>Thành tiền</th>
+							<th>Thanh toán</th>
+							<th>Trạng thái</th>
+							<th>Action</th>
+						</tr>
+					</thead>
+					<tbody id="user-table">
+						<tr th:each="booking : ${bookings}">
+							<td class="table-td" th:text="${booking[0]}"></td>
+							<!-- Mã đơn -->
+							<td class="table-td" th:text="${booking[4]}"></td>
+							<!-- Tour -->
+							<td class="table-td" th:text="${booking[10]}"></td>
+							<!-- Mã thanh toán -->
+							<td class="table-td table-td-date"
+								th:text="${#dates.format(booking[1], 'yyyy-MM-dd')}"></td>
+							<!-- Ngày đặt -->
+							<td class="table-td table-td-date"
+								th:text="${#dates.format(booking[8], 'yyyy-MM-dd')}"></td>
+							<!-- Ngày đi -->
+							<td class="table-td" th:text="${booking[5]}"></td>
+							<!-- Số lượng -->
+							<td class="table-td" th:text="${booking[6]}"></td>
+							<!--  Loại vé -->
+							<td class="table-td" th:text="${booking[9]}"></td>
+							<!-- Khởi hành -->
+							<td class="table-td" th:text="${booking[7]}"></td>
+							<!-- Thành tiền -->
+							<td class="table-td">
+								<!-- Thanh toán --> <span th:if="${booking[2] == 1}">Cash</span>
+								<span th:if="${booking[2] == 2}">Online</span>
+							</td>
+							<td class="table-td">
+								<!-- Trạng thái --> 
+								<span th:if="${booking[3] == 1}">Paid</span>
+								<span th:if="${booking[3] == 2}">Unpaid</span> 
+								<span th:if="${booking[3] == 3}">Cancel</span>
+								<span th:if="${booking[3] == null or booking[3] == ''}">Unpaid</span>
+							</td>
+							<td class="table-td table-td-action">
+								<button class="btn-payment-status"
+									th:text="${booking[3] == 1 ? 'Đã thanh toán' : 'Thanh toán'}"
+									th:disabled="${booking[3] == 1}"
+									th:classappend="${booking[3] == 1} ? 'paid-status' : ''"
+									th:attr="data-booking-id=${booking[0]} , data-total-price=${booking[7]}">
+								</button> 
+								<button id="bt-cancel-order" class="btn-cancel"
+									th:attr="data-booking-id=${booking[0]}, data-departure-date=${#dates.format(booking[8], 'yyyy-MM-dd')}"
+									th:onclick="'navigateRefundPage(' + ${booking[0]} + ')'" >Hủy đơn</button>
+							</td>
+						</tr>
+						<!--modal hủy đơn -->
+						<div id="cancel-confirm-modal" class="modal-overlay">
+							<div class="modal-content">
+								<p>Bạn có chắc chắn muốn hủy đơn này không?</p>
+								<button id="confirm-cancel" >Xác nhận</button>
+								<button id="cancel-close" >Hủy</button>
+							</div>
+						</div>
+
+					</tbody>
+				</table>
+			</div>
+			
+			<!-- Pagination -->
+			<div class="pagination-container">
+				<ul class="pagination" id="pagination">
+				
+					<li th:if="${currentPage > 0}">
+						<a th:href="@{/account/get-order(userId=${user.user_id}, page=${currentPage - 1}, size=5)}">
+							<i class="fas fa-chevron-left icon"></i> 
+						</a>
+					</li>
+
+					<li th:each="i : ${#numbers.sequence(0, totalPages - 1)}">
+						<a th:href="@{/account/get-order(userId=${user.user_id}, page=${i}, size=5)}"
+							th:class="${currentPage == i} ? 'active' : ''" th:text="${i + 1}">
+						</a>
+					</li>
+
+					<li th:if="${currentPage + 1 < totalPages}">
+						<a th:href="@{/account/get-order(userId=${user.user_id}, page=${currentPage + 1}, size=5)}">
+						 <i class="fas fa-chevron-right icon"></i>
+						</a>
+					</li>
+				</ul>
+			</div>
 
 		</div>
-	</div>
-<script src="../js/order.js"></script>
+		<script src="../js/order.js"></script>
 </body>
 </html>
