--- a/WebTour/src/main/resources/templates/User/order.html
+++ b/WebTour/src/main/resources/templates/User/order.html
@@ -86,11 +86,12 @@
 							<td class="table-td table-td-action">
 								<button class="btn-payment-status"
 									th:text="${booking[3] == 1 ? 'Đã thanh toán' : 'Thanh toán'}"
-									th:disabled="${booking[3] == 1}"
+									th:disabled="${booking[3] == 1 || booking[3] == 3}"
 									th:classappend="${booking[3] == 1} ? 'paid-status' : ''"
 									th:attr="data-booking-id=${booking[0]} , data-total-price=${booking[7]}">
 								</button> 
 								<button id="bt-cancel-order" class="btn-cancel"
+									
 									th:attr="data-booking-id=${booking[0]}, data-departure-date=${#dates.format(booking[8], 'yyyy-MM-dd')}"
 									th:onclick="'navigateRefundPage(' + ${booking[0]} + ')'" >Hủy đơn</button>
 							</td>
