add header (commit 11th)
add header for files

--- a/WebTour/src/main/resources/static/css/NotificationSuccess.css
+++ b/WebTour/src/main/resources/static/css/NotificationSuccess.css
@@ -8,18 +8,20 @@ body {
     align-items: center;
     height: 100vh;
     color: #333;
+    display: block;
 }
 
-.container {
+.container-content {
+	margin: 0 auto;
     background-color: #fff;
     border: 1px solid #e0e0e0;
     border-radius: 10px;
     padding: 30px;
-    width: 800px;
+    width: 850px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
-.header {
+.header-content {
     font-size: 28px;
     color: #007bff;
     text-align: center;
