--- a/WebTour/src/main/resources/templates/User/payment.html
+++ b/WebTour/src/main/resources/templates/User/payment.html
@@ -8,9 +8,12 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <script src="https://www.paypal.com/sdk/js?client-id=ARW6b-dLanvCGRATvXwTqwf2KkcQNm11tPjKinXLalb7UD1PJV2OVsOSOhx1l6bM6BBPsSDYNagdR6Uu&currency=USD"></script>
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+<link rel="stylesheet" href="/css/home_user.css">
 </head>
 <body>
-	<div class="container">
+<header id="header"></header>
+	<div class="container-content">
 		<div class="left">
 			<h1>ND Travel</h1>
 
@@ -145,7 +148,7 @@
 			</div>
 		</div>
 	</div>
-	
+	<script src="/js/header.js"></script>
 	<script src="../js/payment.js"></script>
 	<script type="text/javascript">
 		window.onload = function() {
