--- a/WebTour/src/main/resources/templates/components/header.html
+++ b/WebTour/src/main/resources/templates/components/header.html
@@ -63,7 +63,12 @@ nav ul li a:hover {
 .icons .hotline i {
     font-size: 25px;
 }
-
+.icons{
+	display: flex; 
+}
+.hotline {
+	margin: 0;
+}
 .dropdown-content {
     display: none;
     position: absolute;
