--- a/WebTour/src/main/resources/static/css/detailTour.css
+++ b/WebTour/src/main/resources/static/css/detailTour.css
@@ -7,23 +7,23 @@ body {
 	background-color: #f5f5f5;
 }
 
-.container {
+.container-content {
 	width: 90%;
 	margin: 0 auto;
 	padding: 20px;
 }
 
-.header {
+.header-content {
 	text-align: center;
 	margin-bottom: 20px;
 }
 
-.header h1 {
+.header-content h1 {
 	font-size: 24px;
 	margin: 0;
 }
 
-.header .stars {
+.header-content .stars {
 	color: #007bff;
 	cursor: pointer;
 }
@@ -469,22 +469,39 @@ span {
 .schedule-p-span{
 	margin: 0;
 }
+.schedule-day-container{
+	display: flex;
+	font-size: 20px;
+}
+.schedule-step{
+	margin-left: 8px;
+}
+.schedule-activity-container{
+	margin-top: 1%;
+}
+
+pre {
+    font-family: Arial, sans-serif; 
+    font-size: 16px; 
+    line-height: 1.5; 
+    white-space: pre-wrap; /* Cho phép tự động xuống dòng nếu quá dài */
+}
 
 @media (max-width: 768px) {
     .first-main-content {
-        flex-direction: column; /* Chuyển sang cột khi màn hình nhỏ */
-        align-items: center; /* Căn giữa */
+        flex-direction: column;
+        align-items: center; 
     }
 
     .main-content .image-gallery {
-        width: 100%; /* Chiếm toàn bộ chiều rộng */
-        margin-left: 0; /* Bỏ lề trái */
+        width: 100%; 
+        margin-left: 0; 
     }
 
     .main-content .booking-info {
-        width: 100%; /* Chiếm toàn bộ chiều rộng */
-        margin-left: 0; /* Bỏ lề trái */
-        margin-right: 0; /* Bỏ lề phải */
+        width: 100%; 
+        margin-left: 0; 
+        margin-right: 0; 
     }
 
     .main-content .image-thumbnails img {
@@ -518,7 +535,7 @@ span {
 }
 
 @media (max-width: 480px) {
-    .header h1 {
+    .header-content h1 {
         font-size: 20px; /* Giảm kích thước chữ tiêu đề */
     }
 
