--- a/WebTour/src/main/resources/static/css/payment.css
+++ b/WebTour/src/main/resources/static/css/payment.css
@@ -7,7 +7,7 @@ body {
 	background-color: #f5f5f5;
 }
 
-.container {
+.container-content {
 	display: flex;
 	justify-content: space-between;
 	padding: 20px;
@@ -247,7 +247,7 @@ div .div-quantity .quantity-p{
 }
 /* Responsive adjustments */
 @media (max-width: 768px) {
-    .container {
+    .container-content {
         flex-direction: column;
         padding: 10px;
     }
