--- a/WebTour/src/main/resources/static/css/schedule_management.css
+++ b/WebTour/src/main/resources/static/css/schedule_management.css
@@ -1,9 +1,11 @@
 .main-content {
 	/* margin-left: 250px; */
-	padding: 20px;
+	padding: 10px;
 }
-
-.header {
+.container-content{
+	display:block;
+}
+.header-content {
 	margin-right: 1%;
 	display: flex;
 	justify-content: space-between;
@@ -13,30 +15,30 @@
 	border-bottom: 1px solid #e3e6f0;
 }
 
-.header .search-bar {
+.header-content .search-bar {
 	display: flex;
 	align-items: center;
 }
 
-.header .search-bar input {
+.header-content .search-bar input {
 	border: 1px solid #e3e6f0;
 	border-radius: 4px;
 	padding: 5px 10px;
 	margin-right: 10px;
 }
 
-.header .user-info {
+.header-content .user-info {
 	display: flex;
 	align-items: center;
 }
 
-.header .user-info img {
+.header-content .user-info img {
 	width: 40px;
 	border-radius: 50%;
 	margin-right: 10px;
 }
 
-.header .user-info span {
+.header-content .user-info span {
 	font-weight: 500;
 }
 
