--- a/WebTour/src/main/resources/templates/Admin/editSchedule.html
+++ b/WebTour/src/main/resources/templates/Admin/editSchedule.html
@@ -7,8 +7,11 @@
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+<link rel="stylesheet" href="/css/home_user.css">
 </head>
 <body>
+<header id="header"></header>
 	<div class="edit-container">
 		<h2>Edit Schedule</h2>
 		<p>
@@ -32,7 +35,6 @@
 					<th>Location</th>
 					<th>Action</th>
 					<th>Delete</th>
-					<th>Status</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -48,7 +50,6 @@
 					<td>
 						<button id="bt-delete-schedule-in-table" class="btDelete-in-table">Xóa</button>
 					</td>
-					<td th:text="${schedule.status ? 'Active' : 'Inactive'}">Status</td>
 				</tr>
 			</tbody>
 		</table>
@@ -104,6 +105,7 @@
 
 
 	</div>
+	<script src="/js/header.js"></script>
 	<script src="../js/editSchedule.js"></script>
 </body>
 </html>
