--- a/WebTour/src/main/resources/templates/Admin/schedule_management.html
+++ b/WebTour/src/main/resources/templates/Admin/schedule_management.html
@@ -7,12 +7,15 @@
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+<link rel="stylesheet" href="/css/home_user.css">
 </head>
 <body>
-	<div class="container">
+<header id="header"></header>
+	<div class="container-content">
 
 		<div class="main-content">
-			<div class="header">
+			<div class="header-content">
 				<div class="search-bar">
 					<input id="search-input" placeholder="Search..." type="text" /> <i
 						class="fas fa-search" id="search-icon"> </i>
@@ -93,6 +96,7 @@
 	</div>
 
 	</div>
+	<script src="/js/header.js"></script>
 	<script src="../js/schedule_management.js"></script>
 </body>
 </html>
