--- a/WebTour/src/main/resources/templates/User/notificationSuccess.html
+++ b/WebTour/src/main/resources/templates/User/notificationSuccess.html
@@ -7,10 +7,14 @@
 <link rel="stylesheet" href="/css/notificationSuccess.js">
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+<link rel="stylesheet" href="/css/home_user.css">
 </head>
 <body>
-	<div class="container">
-		<div class="header">ND Travel</div>
+<header id="header"></header>
+	<div class="container-content">
+		<div class="header-content">ND Travel</div>
 		<div class="confirmation">
 			<i class="fas fa-check-circle"> </i>
 			<div class="confirmation-text">
@@ -93,6 +97,7 @@
 			</button>
 		</div>
 	</div>
+	<script src="/js/header.js"></script>
 	<script src="../js/notificationSuccess.js"></script>
 </body>
 </html>
